// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageForm component IE10 uses an Input 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="messageArea"
  >
    <form
      className="Form"
      onSubmit={[Function]}
    >
      <Input
        autoFocus={true}
        data-test="messageInput"
        disabled={false}
        inputStyle={
          Object {
            "color": "#68b588",
            "fontFamily": "Source Sans Pro",
          }
        }
        maxLength={1024}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onSubmit={[Function]}
        placeholder="Send us a message..."
        value=""
      />
    </form>
    <button
      className="messageFormBtn attachmentBtn"
      disabled={false}
      onClick={[MockFunction]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
      title="Send file"
    >
      <Icon
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f0c6",
              "M149.106 512c-33.076 0-66.153-12.59-91.333-37.771-50.364-50.361-50.364-132.305-.002-182.665L319.842 29.498c39.331-39.331 103.328-39.331 142.66 0 39.331 39.332 39.331 103.327 0 142.657l-222.63 222.626c-28.297 28.301-74.347 28.303-102.65 0-28.3-28.301-28.3-74.349 0-102.649l170.301-170.298c4.686-4.686 12.284-4.686 16.97 0l5.661 5.661c4.686 4.686 4.686 12.284 0 16.971l-170.3 170.297c-15.821 15.821-15.821 41.563.001 57.385 15.821 15.82 41.564 15.82 57.385 0l222.63-222.626c26.851-26.851 26.851-70.541 0-97.394-26.855-26.851-70.544-26.849-97.395 0L80.404 314.196c-37.882 37.882-37.882 99.519 0 137.401 37.884 37.881 99.523 37.882 137.404.001l217.743-217.739c4.686-4.686 12.284-4.686 16.97 0l5.661 5.661c4.686 4.686 4.686 12.284 0 16.971L240.44 474.229C215.26 499.41 182.183 512 149.106 512z",
            ],
            "iconName": "paperclip",
            "prefix": "fal",
          }
        }
      />
    </button>
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
      title="Emoji picker"
    >
      <Icon
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f118",
              "M130.563 312.687c-11.491-17.773 15.372-35.165 26.873-17.373 53.453 82.678 143.744 82.63 197.164 0 11.523-17.82 38.352-.382 26.873 17.373-66.111 102.261-184.893 102.113-250.91 0zM320 144a47.789 47.789 0 0 0-22.603 5.647h.015c10.916 0 19.765 8.849 19.765 19.765s-8.849 19.765-19.765 19.765-19.765-8.849-19.765-19.765v-.015A47.789 47.789 0 0 0 272 192c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48zm-128 0a47.789 47.789 0 0 0-22.603 5.647h.015c10.916 0 19.765 8.849 19.765 19.765s-8.849 19.765-19.765 19.765-19.765-8.849-19.765-19.765v-.015A47.789 47.789 0 0 0 144 192c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48zm64-104C136.055 40 40 137.336 40 256c0 119.945 97.336 216 216 216 119.945 0 216-97.336 216-216 0-119.945-97.336-216-216-216m0-32c136.967 0 248 111.033 248 248S392.967 504 256 504 8 392.967 8 256 119.033 8 256 8z",
            ],
            "iconName": "smile",
            "prefix": "fal",
          }
        }
      />
    </button>
    <MenuButton
      buttonStyles={
        Object {
          "background": "red",
          "borderRight": "2px solid rgb(244, 244, 248)",
        }
      }
      className=""
      closeOnChildClick={true}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [],
            "f0c9",
            "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
          ],
          "iconName": "bars",
          "prefix": "fas",
        }
      }
      iconStyles={
        Object {
          "color": "#848484",
          "display": "none",
          "fontSize": "19px",
          "marginTop": "1px",
        }
      }
      keepChildrenMounted={false}
      menuPosition="top-right"
      offset={
        Object {
          "horizontal": "-115px",
          "vertical": "40px",
        }
      }
      title="Options"
    >
      <Menu
        containerStyle={
          Object {
            "fontFamily": "Lato, sans-serif",
            "zIndex": 1000,
          }
        }
        items={
          Array [
            Object {
              "icon": Object {
                "icon": Object {
                  "icon": "",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "Spidey",
              "label": "Babel",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Danny McBridal",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "icon": Object {
                  "icon": Array [
                    256,
                    512,
                    Array [],
                    "f026",
                    "M256 88.017v335.964c0 21.438-25.943 31.998-40.971 16.971L126.059 352H24c-13.255 0-24-10.745-24-24V184c0-13.255 10.745-24 24-24h102.059l88.971-88.954c15.01-15.01 40.97-4.49 40.97 16.971z",
                  ],
                  "iconName": "volume-off",
                  "prefix": "fas",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "muteSounds",
              "label": "Mute Sounds",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Mute new message sounds",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "icon": Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f0e0",
                    "M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z",
                  ],
                  "iconName": "envelope",
                  "prefix": "fas",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "emailTranscript",
              "label": "Email Transcript",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Email a full transcript of the current chat",
            },
          ]
        }
      />
    </MenuButton>
    <Connect(EmojiPicker)
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`MessageForm component No agentds available and agent availability enforced and not subscribed renders 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="messageArea"
  >
    <Connect(EmojiTextArea)
      data-test="messageInput"
      disabled={false}
      maxLength={1024}
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onIMEModeEntered={[Function]}
      onReturn={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
    />
    <button
      className="messageFormBtn attachmentBtn"
      disabled={false}
      onClick={[MockFunction]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
      title="Send file"
    >
      <Icon
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f0c6",
              "M149.106 512c-33.076 0-66.153-12.59-91.333-37.771-50.364-50.361-50.364-132.305-.002-182.665L319.842 29.498c39.331-39.331 103.328-39.331 142.66 0 39.331 39.332 39.331 103.327 0 142.657l-222.63 222.626c-28.297 28.301-74.347 28.303-102.65 0-28.3-28.301-28.3-74.349 0-102.649l170.301-170.298c4.686-4.686 12.284-4.686 16.97 0l5.661 5.661c4.686 4.686 4.686 12.284 0 16.971l-170.3 170.297c-15.821 15.821-15.821 41.563.001 57.385 15.821 15.82 41.564 15.82 57.385 0l222.63-222.626c26.851-26.851 26.851-70.541 0-97.394-26.855-26.851-70.544-26.849-97.395 0L80.404 314.196c-37.882 37.882-37.882 99.519 0 137.401 37.884 37.881 99.523 37.882 137.404.001l217.743-217.739c4.686-4.686 12.284-4.686 16.97 0l5.661 5.661c4.686 4.686 4.686 12.284 0 16.971L240.44 474.229C215.26 499.41 182.183 512 149.106 512z",
            ],
            "iconName": "paperclip",
            "prefix": "fal",
          }
        }
      />
    </button>
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
      title="Emoji picker"
    >
      <Icon
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f118",
              "M130.563 312.687c-11.491-17.773 15.372-35.165 26.873-17.373 53.453 82.678 143.744 82.63 197.164 0 11.523-17.82 38.352-.382 26.873 17.373-66.111 102.261-184.893 102.113-250.91 0zM320 144a47.789 47.789 0 0 0-22.603 5.647h.015c10.916 0 19.765 8.849 19.765 19.765s-8.849 19.765-19.765 19.765-19.765-8.849-19.765-19.765v-.015A47.789 47.789 0 0 0 272 192c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48zm-128 0a47.789 47.789 0 0 0-22.603 5.647h.015c10.916 0 19.765 8.849 19.765 19.765s-8.849 19.765-19.765 19.765-19.765-8.849-19.765-19.765v-.015A47.789 47.789 0 0 0 144 192c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48zm64-104C136.055 40 40 137.336 40 256c0 119.945 97.336 216 216 216 119.945 0 216-97.336 216-216 0-119.945-97.336-216-216-216m0-32c136.967 0 248 111.033 248 248S392.967 504 256 504 8 392.967 8 256 119.033 8 256 8z",
            ],
            "iconName": "smile",
            "prefix": "fal",
          }
        }
      />
    </button>
    <MenuButton
      buttonStyles={
        Object {
          "background": "red",
          "borderRight": "2px solid rgb(244, 244, 248)",
        }
      }
      className=""
      closeOnChildClick={true}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [],
            "f0c9",
            "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
          ],
          "iconName": "bars",
          "prefix": "fas",
        }
      }
      iconStyles={
        Object {
          "color": "#848484",
          "display": "none",
          "fontSize": "19px",
          "marginTop": "1px",
        }
      }
      keepChildrenMounted={false}
      menuPosition="top-right"
      offset={
        Object {
          "horizontal": "-115px",
          "vertical": "40px",
        }
      }
      title="Options"
    >
      <Menu
        containerStyle={
          Object {
            "fontFamily": "Lato, sans-serif",
            "zIndex": 1000,
          }
        }
        items={
          Array [
            Object {
              "icon": Object {
                "icon": Object {
                  "icon": "",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "Spidey",
              "label": "Babel",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Danny McBridal",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "icon": Object {
                  "icon": Array [
                    256,
                    512,
                    Array [],
                    "f026",
                    "M256 88.017v335.964c0 21.438-25.943 31.998-40.971 16.971L126.059 352H24c-13.255 0-24-10.745-24-24V184c0-13.255 10.745-24 24-24h102.059l88.971-88.954c15.01-15.01 40.97-4.49 40.97 16.971z",
                  ],
                  "iconName": "volume-off",
                  "prefix": "fas",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "muteSounds",
              "label": "Mute Sounds",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Mute new message sounds",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "icon": Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f0e0",
                    "M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z",
                  ],
                  "iconName": "envelope",
                  "prefix": "fas",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "emailTranscript",
              "label": "Email Transcript",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Email a full transcript of the current chat",
            },
          ]
        }
      />
    </MenuButton>
    <Connect(EmojiPicker)
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`MessageForm component rendering renders 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="messageArea"
  >
    <Connect(EmojiTextArea)
      data-test="messageInput"
      disabled={false}
      maxLength={1024}
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onIMEModeEntered={[Function]}
      onReturn={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
    />
    <button
      className="messageFormBtn attachmentBtn"
      disabled={false}
      onClick={[MockFunction]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
      title="Send file"
    >
      <Icon
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f0c6",
              "M149.106 512c-33.076 0-66.153-12.59-91.333-37.771-50.364-50.361-50.364-132.305-.002-182.665L319.842 29.498c39.331-39.331 103.328-39.331 142.66 0 39.331 39.332 39.331 103.327 0 142.657l-222.63 222.626c-28.297 28.301-74.347 28.303-102.65 0-28.3-28.301-28.3-74.349 0-102.649l170.301-170.298c4.686-4.686 12.284-4.686 16.97 0l5.661 5.661c4.686 4.686 4.686 12.284 0 16.971l-170.3 170.297c-15.821 15.821-15.821 41.563.001 57.385 15.821 15.82 41.564 15.82 57.385 0l222.63-222.626c26.851-26.851 26.851-70.541 0-97.394-26.855-26.851-70.544-26.849-97.395 0L80.404 314.196c-37.882 37.882-37.882 99.519 0 137.401 37.884 37.881 99.523 37.882 137.404.001l217.743-217.739c4.686-4.686 12.284-4.686 16.97 0l5.661 5.661c4.686 4.686 4.686 12.284 0 16.971L240.44 474.229C215.26 499.41 182.183 512 149.106 512z",
            ],
            "iconName": "paperclip",
            "prefix": "fal",
          }
        }
      />
    </button>
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
      title="Emoji picker"
    >
      <Icon
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f118",
              "M130.563 312.687c-11.491-17.773 15.372-35.165 26.873-17.373 53.453 82.678 143.744 82.63 197.164 0 11.523-17.82 38.352-.382 26.873 17.373-66.111 102.261-184.893 102.113-250.91 0zM320 144a47.789 47.789 0 0 0-22.603 5.647h.015c10.916 0 19.765 8.849 19.765 19.765s-8.849 19.765-19.765 19.765-19.765-8.849-19.765-19.765v-.015A47.789 47.789 0 0 0 272 192c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48zm-128 0a47.789 47.789 0 0 0-22.603 5.647h.015c10.916 0 19.765 8.849 19.765 19.765s-8.849 19.765-19.765 19.765-19.765-8.849-19.765-19.765v-.015A47.789 47.789 0 0 0 144 192c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48zm64-104C136.055 40 40 137.336 40 256c0 119.945 97.336 216 216 216 119.945 0 216-97.336 216-216 0-119.945-97.336-216-216-216m0-32c136.967 0 248 111.033 248 248S392.967 504 256 504 8 392.967 8 256 119.033 8 256 8z",
            ],
            "iconName": "smile",
            "prefix": "fal",
          }
        }
      />
    </button>
    <MenuButton
      buttonStyles={
        Object {
          "background": "red",
          "borderRight": "2px solid rgb(244, 244, 248)",
        }
      }
      className=""
      closeOnChildClick={true}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [],
            "f0c9",
            "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
          ],
          "iconName": "bars",
          "prefix": "fas",
        }
      }
      iconStyles={
        Object {
          "color": "#848484",
          "display": "none",
          "fontSize": "19px",
          "marginTop": "1px",
        }
      }
      keepChildrenMounted={false}
      menuPosition="top-right"
      offset={
        Object {
          "horizontal": "-115px",
          "vertical": "40px",
        }
      }
      title="Options"
    >
      <Menu
        containerStyle={
          Object {
            "fontFamily": "Lato, sans-serif",
            "zIndex": 1000,
          }
        }
        items={
          Array [
            Object {
              "icon": Object {
                "icon": Object {
                  "icon": "",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "Spidey",
              "label": "Babel",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Danny McBridal",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "icon": Object {
                  "icon": Array [
                    256,
                    512,
                    Array [],
                    "f026",
                    "M256 88.017v335.964c0 21.438-25.943 31.998-40.971 16.971L126.059 352H24c-13.255 0-24-10.745-24-24V184c0-13.255 10.745-24 24-24h102.059l88.971-88.954c15.01-15.01 40.97-4.49 40.97 16.971z",
                  ],
                  "iconName": "volume-off",
                  "prefix": "fas",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "muteSounds",
              "label": "Mute Sounds",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Mute new message sounds",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "icon": Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f0e0",
                    "M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z",
                  ],
                  "iconName": "envelope",
                  "prefix": "fas",
                },
                "style": Object {
                  "color": "#2199e8",
                },
              },
              "id": "emailTranscript",
              "label": "Email Transcript",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Lato, sans-serif",
                "zIndex": 1000,
              },
              "title": "Email a full transcript of the current chat",
            },
          ]
        }
      />
    </MenuButton>
    <Connect(EmojiPicker)
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;
